retrieveUnpackaged/objects/Advertiser__c.object
<CustomObject>
    <description>All advertisers to Go-Global</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>&quot;abc@xyz.com&quot;</defaultValue>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Advertiser</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Advertiser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advertisers</pluralLabel>
    <recordTypes>
        <fullName>Fortune_500_Advertiser</fullName>
        <active>true</active>
        <description>Our Highest Valuable Advertisers</description>
        <label>Fortune 500 Advertiser</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospective_Advertiser</fullName>
        <active>true</active>
        <description>Someone who is sitting on the fence</description>
        <label>Prospective Advertiser</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>